[project]
name = "secure-vault-cli"
version = "0.1.0"
description = "A secure CLI password manager"
authors = [
    {name = "Chen Paz"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
